# kido-ruteo

./: .gitignore  CENTROID_ARCHITECTURE.md  CENTROID_FIXES_SUMMARY.md  DELIVERABLES.md  DETAILED_CODE_CHANGES.md  ESTADO_FINAL.md  EXECUTION_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_CHECKLIST.py  PIPELINE_EXECUTION_SUMMARY.md  README.md  README_CENTROID_FIXES.md  analyze_centroid_issue.py  check_centroids.py  check_checkpoint.py  check_nodes.py  check_results.py  download_osm_network.py  explore_zonification.py  inspect_graph.py  pipeline_output.txt  pyproject.toml  requirements.txt  setup.py  test_centroid_fixes.py  validate_network.py  verify_fixes.py
config/: paths.yaml  routing.yaml  validation.yaml
data/catalogs/: sense_cardinality.csv
data/interim/: kido_interim.csv  od_with_nodes.csv
data/network/: centroids.gpkg
debug_output/: debug_checkpoint2030_trace.csv  veh_audit_checkpoint2030_flagged.csv
debug_output/plots/: checkpoint2030_routes_sample.csv
docs/: BUSINESS_INVARIANTS.md  DATA_CONTRACT.md  IMPLEMENTATION_SUMMARY.md  OUTPUT_CREATION_DETAILED_GUIDE.md  PIPELINE_FULL_EXAMPLE.md  STRICT_MODE.md  STRICT_MODE_V2_CORRECTIONS.md  business_rules.md  flow.md  output_schema.md
docs/dev/: IMPLEMENTATION_SUMMARY.md
examples/real_data/: mapping_missing_nodes.csv
notebooks/: exploracion.ipynb
scripts/: analyze_inconsistencies.py  analyze_processed_checkpoint2030.py  assign_nodes_to_od.py  build_routes.py  check_results.py  clean_branches.sh  compute_centrality.py  compute_congruence.py  compute_impedance.py  compute_impedance2.py  compute_viajes.py  debug_blank_vehicles.py  debug_checkpoint2030.py  debug_checkpoint2030_postprocess.py  debug_checkpoint2030_routes_overview.py  debug_checkpoint2030_veh_audit.py  evaluate_congruence.py  generate_network.py  ingest.py  ingest_data.py  kido_automation.py  preprocess_data.py  run_all_checkpoints.py  run_full_pipeline.py  run_preprocessing.py  run_routing_real.py  run_single_checkpoint.py  run_validation_real.py  test_manual_checkpoints.py  test_routing_with_real_data.py
tests/: test_business_rules.py  test_centroids.py  test_cleaner.py  test_congruence.py  test_equivalence.py  test_final_business_rules.py  test_insumos_od.py  test_insumos_pipeline.py  test_io.py  test_kido_automation.py  test_manual_checkpoint_override.py  test_network_fallback.py  test_pipeline_master.py  test_placeholder.py  test_preprocessing.py  test_processing_pipeline.py  test_routing.py  test_strict_business_rules.py  test_strict_capacity.py  test_strict_mode_v2.py  test_vector_acceso.py
(+88 files in other folders)
