[project]
name = "kido-ruteo"
version = "2.0.0"
description = "Sistema completo de ruteo y congruencia KIDO para matrices Origen-Destino"
authors = [
    {name = "KIDO Team", email = "team@kido.example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["transportation", "routing", "origin-destination", "congruence", "kido"]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.5.0",
    "networkx>=3.0",
    "osmnx>=1.9.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "openpyxl>=3.1.0",
    "pytest>=7.4.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
